# tree-sitter-calibre

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.cl  tree-sitter.json
bindings/c/: tree-sitter-calibre.pc.in
bindings/c/tree_sitter/: tree-sitter-calibre.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_calibre/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCalibreTests/: TreeSitterCalibreTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
