[package]
name = "tree-sitter-calibre"
description = "A scripting language entirely made in rust for educational purposes"
version = "0.1.0"
authors = ["Creative Coders <officialccoders@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "calibre"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/coderscreative/calibre-lang"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
